# lanelet2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
cmake/: CodeCoverage.cmake
lanelet2_core/: CMakeLists.txt
lanelet2_core/include/lanelet2_core/primitives/: BoundingBox.h  Point.h
lanelet2_core/include/lanelet2_core/utility/: HybridMap.h
lanelet2_core/scripts/: lanelet_gdb.py  qtcreator_debugging_helpers.py
lanelet2_core/src/: BasicRegulatoryElements.cpp  LaneletMap.cpp  RegulatoryElement.cpp
lanelet2_core/test/: test_lanelet.cpp  test_polygon.cpp
lanelet2_examples/: CMakeLists.txt  conanfile.py
lanelet2_examples/scripts/: tutorial.py
lanelet2_examples/test/: test_examples.py
lanelet2_io/: CMakeLists.txt
lanelet2_io/include/lanelet2_io/io_handlers/: Serialize.h
lanelet2_io/src/: BinHandler.cpp  Factory.cpp  Io.cpp  OsmFile.cpp  OsmHandlerLoad.cpp  OsmHandlerWrite.cpp
lanelet2_io/test/: TestBinHandler.cpp  TestOsmFile.cpp  TestSetup.h  TestSimpleUsage.cpp
lanelet2_maps/: CMakeLists.txt
lanelet2_matching/: CMakeLists.txt
lanelet2_matching/test/: lanelet2_matching.cpp
lanelet2_projection/: CMakeLists.txt
lanelet2_projection/src/: Geocentric.cpp  LocalCartesian.cpp
lanelet2_projection/test/: test_Geocentric.cpp  test_LocalCartesian.cpp
lanelet2_python/: CMakeLists.txt
lanelet2_python/python_api/: core.cpp  io.cpp  projection.cpp
lanelet2_python/scripts/: create_debug_routing_graph.py  make_ids_positive.py  print_ids.py
lanelet2_python/src/lanelet2/: __init__.py
lanelet2_python/test/: test_lanelet2.py  test_lanelet2_matching.py  test_lanelet2_projection.py
lanelet2_routing/: CMakeLists.txt
lanelet2_routing/include/lanelet2_routing/internal/: Graph.h
lanelet2_routing/src/: RouteBuilder.cpp  RoutingGraph.cpp
lanelet2_routing/test/: test_routing_map.h  test_routing_visualization.cpp
lanelet2_traffic_rules/: CMakeLists.txt
lanelet2_traffic_rules/src/: GermanTrafficRules.cpp  TrafficRulesFactory.cpp
lanelet2_validation/: CMakeLists.txt
lanelet2_validation/src/: ValidatorFactory.cpp
lanelet2_validation/src/validators/: CheckTags.cpp  CurvatureTooBig.cpp  DuplicatedPoints.cpp  PointsTooClose.cpp  RoutingGraphIsValid.cpp
lanelet2_validation/test/: lanelet2_validation.cpp
python/lanelet2/: __init__.py
