[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "lanelet2x"
dynamic = ["version"]
authors = [
    { name = "Fabian Poggenhans", email = "fabian.poggenhans@kit.edu" },
    { name = "Fabian Immel", email = "fabian.immel@kit.edu" },
]
maintainers = [
    { name = "Vincent Wu", email = "zhengyu.wu21@imperial.ac.uk" }
]
description = "Endstone offers a plugin API for Bedrock Dedicated Servers, supporting both Python and C++ languages. This allowing developers to enhance Bedrock Dedicated Servers with various features and functionalities."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["python", "lanelet2"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = ["--preset conan-release"]
cmake.define = { LANELET2_ENABLE_TESTING = "OFF" }
cmake.build-type = "Release"
wheel.packages = ["lanelet2_python/src/lanelet2"]
wheel.license-files = ["LICENSE", "CODEOWNERS"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "lanelet2_python/src/lanelet2/__init__.py"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["--preset conan-default"]